enable testing in java 17
fix a defective cross-version module dependency